force-app/main/default/objects/WOSLineItem__c/WOSLineItem__c.object-meta.xml
<CustomObject>
    <label>W/O/S Line</label>
    <nameField>
        <displayFormat>WOSL-{00000000}</displayFormat>
        <label>WOS LINE ITEM ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>W/O/S Line</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>