force-app/main/default/objects/WOSLineItem__c/fields/Cargo__c.field-meta.xml
<CustomField>
    <fullName>Cargo__c</fullName>
    <label>Cargo</label>
    <referenceTo>Cargo__c</referenceTo>
    <relationshipLabel>WOS LINE ITEMS</relationshipLabel>
    <relationshipName>WosLineItem</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>