force-app/main/default/objects/WOSLineItem__c/fields/CargoStatus__c.field-meta.xml
<CustomField>
    <fullName>CargoStatus__c</fullName>
    <label>Cargo Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Missing</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
            <value>
                <fullName>Finalized</fullName>
                <isActive>false</isActive>
                <label>Finalized</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>