force-app/main/default/objects/WOSLineItem__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; +  WorkOrderService__r.Carrier__c  , WorkOrderService__r.Carrier__r.Name , &apos;_top&apos;)</formula>
    <label>CARRIER</label>
    <type>Text</type>
</CustomField>