force-app/main/default/objects/WOSLineItem__c/fields/CarrierCode__c.field-meta.xml
<CustomField>
    <fullName>CarrierCode__c</fullName>
    <formula>WorkOrderService__r.CarrierCode__c</formula>
    <label>CARRIER CODE</label>
    <type>Text</type>
</CustomField>