force-app/main/default/objects/WOSLineItem__c/fields/ContainerID__c.field-meta.xml
<CustomField>
    <fullName>ContainerID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CONTAINER ID</label>
    <referenceTo>CONTAINER__c</referenceTo>
    <relationshipLabel>W/O/S LINE</relationshipLabel>
    <relationshipName>WOSLineContainer</relationshipName>
    <type>Lookup</type>
</CustomField>