force-app/main/default/objects/WOSLineItem__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <formula>WorkOrderService__r.WorkOrder__r.Customer__c</formula>
    <label>Customer</label>
    <type>Text</type>
</CustomField>