force-app/main/default/objects/WOSLineItem__c/fields/GoodsPOID__c.field-meta.xml
<CustomField>
    <fullName>GoodsPOID__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; +  WorkOrderService__r.GoodsPOID__c  ,  WorkOrderService__r.GoodsPOID__r.Name  , &apos;_top&apos;)</formula>
    <label>GOODS P/O ID</label>
    <type>Text</type>
</CustomField>