force-app/main/default/objects/WOSLineItem__c/fields/GoodsSOID__c.field-meta.xml
<CustomField>
    <fullName>GoodsSOID__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; +  WorkOrderService__r.GoodsSOID__c  ,  WorkOrderService__r.GoodsSOID__r.Name  , &apos;_top&apos;)</formula>
    <label>GOODS S/O ID</label>
    <type>Text</type>
</CustomField>