force-app/main/default/objects/WOSLineItem__c/fields/IsCargoScanned__c.field-meta.xml
<CustomField>
    <fullName>IsCargoScanned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Cargo Scanned</label>
    <type>Checkbox</type>
</CustomField>