force-app/main/default/objects/WOSLineItem__c/fields/Locator__c.field-meta.xml
<CustomField>
    <fullName>Locator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LOCATOR</label>
    <referenceTo>LOCATOR__c</referenceTo>
    <relationshipName>WOSLineItemID</relationshipName>
    <type>Lookup</type>
</CustomField>