force-app/main/default/objects/WOSLineItem__c/fields/ProductID__c.field-meta.xml
<CustomField>
    <fullName>ProductID__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; +  Cargo__r.Product__c ,  Cargo__r.Product__r.Name  , &apos;_top&apos;)</formula>
    <label>PRODUCT ID</label>
    <type>Text</type>
</CustomField>