force-app/main/default/objects/WOSLineItem__c/fields/QRCodeLabel__c.field-meta.xml
<CustomField>
    <fullName>QRCodeLabel__c</fullName>
    <formula>Cargo__r.QrCodeImage__c</formula>
    <label>QR CODE LABEL</label>
    <type>Text</type>
</CustomField>