force-app/main/default/objects/WOSLineItem__c/fields/ScanTime__c.field-meta.xml
<CustomField>
    <fullName>ScanTime__c</fullName>
    <label>Scan Time</label>
    <type>DateTime</type>
</CustomField>