force-app/main/default/objects/WOSLineItem__c/fields/WO_Cargo__c.field-meta.xml
<CustomField>
    <fullName>WO_Cargo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WO+Cargo</label>
    <referenceTo>WO_Cargo__c</referenceTo>
    <relationshipLabel>W/O/S LINE</relationshipLabel>
    <relationshipName>WosLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>