force-app/main/default/objects/WOSLineItem__c/fields/WORecordType__c.field-meta.xml
<CustomField>
    <fullName>WORecordType__c</fullName>
    <formula>WorkOrderID__r.RecordType.Name</formula>
    <label>W/O RECORD TYPE</label>
    <type>Text</type>
</CustomField>