force-app/main/default/objects/WOSLineItem__c/fields/Worker__c.field-meta.xml
<CustomField>
    <fullName>Worker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WORKER</label>
    <referenceTo>WORKER__c</referenceTo>
    <relationshipLabel>WOS LINE ITEMS</relationshipLabel>
    <relationshipName>WosLineItem</relationshipName>
    <type>Lookup</type>
</CustomField>