force-app/main/default/objects/WOSLineItem__c/fields/WorkOrderID__c.field-meta.xml
<CustomField>
    <fullName>WorkOrderID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WORK ORDER ID</label>
    <referenceTo>WorkOrder__c</referenceTo>
    <relationshipLabel>W/O/S LINE ITEMS</relationshipLabel>
    <relationshipName>WOSLineItem</relationshipName>
    <type>Lookup</type>
</CustomField>