force-app/main/default/objects/WOSLineItem__c/fields/WorkOrderService__c.field-meta.xml
<CustomField>
    <fullName>WorkOrderService__c</fullName>
    <label>WORK ORDER SERVICE</label>
    <referenceTo>WorkOrderService__c</referenceTo>
    <relationshipLabel>WMS W/O/S LINE ITEMS</relationshipLabel>
    <relationshipName>WosLineItem</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>