force-app/main/default/objects/WOSLineItem__c/fields/WOSCNTR_ID__c.field-meta.xml
<CustomField>
    <fullName>WOSCNTR_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WOS+CNTR ID</label>
    <referenceTo>WOSCNTR__c</referenceTo>
    <relationshipLabel>W/O/S LINE</relationshipLabel>
    <relationshipName>WOSLContainer</relationshipName>
    <type>Lookup</type>
</CustomField>