force-app/main/default/objects/WOSLineItem__c/fields/WOSRecordType__c.field-meta.xml
<CustomField>
    <fullName>WOSRecordType__c</fullName>
    <formula>WorkOrderService__r.RecordType.Name</formula>
    <label>W/O/S RECORD TYPE</label>
    <type>Text</type>
</CustomField>