force-app/main/default/objects/WOSLineItem__c/fields/WOSScheduledStartTiome__c.field-meta.xml
<CustomField>
    <fullName>WOSScheduledStartTiome__c</fullName>
    <formula>WorkOrderService__r.ScheduledStartTime__c</formula>
    <label>W/O/S SCHEDULED START TIME</label>
    <type>DateTime</type>
</CustomField>