force-app/main/default/objects/WOSLineItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>WorkOrderID__c</columns>
    <columns>WorkOrderService__c</columns>
    <columns>WOSRecordType__c</columns>
    <columns>NAME</columns>
    <columns>CargoStatus__c</columns>
    <columns>Cargo__c</columns>
    <columns>IsCargoScanned__c</columns>
    <columns>Locator__c</columns>
    <columns>ScanTime__c</columns>
    <columns>Worker__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>