force-app/main/default/objects/WOSLineItem__c/listViews/All_Massive_update.listView-meta.xml
<ListView>
    <fullName>All_Massive_update</fullName>
    <columns>WorkOrderID__c</columns>
    <columns>WorkOrderService__c</columns>
    <columns>WOSRecordType__c</columns>
    <columns>NAME</columns>
    <columns>CargoStatus__c</columns>
    <columns>Cargo__c</columns>
    <columns>IsCargoScanned__c</columns>
    <columns>Locator__c</columns>
    <columns>ScanTime__c</columns>
    <columns>Worker__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>WorkOrderService__c</field>
        <operation>equals</operation>
        <value>WOS-006050</value>
    </filters>
    <label>All-Massive update</label>
</ListView>