force-app/main/default/objects/WOSLineItem__c/listViews/CargoStatusUpdate.listView-meta.xml
<ListView>
    <fullName>CargoStatusUpdate</fullName>
    <columns>NAME</columns>
    <columns>CargoStatus__c</columns>
    <columns>WorkOrderID__c</columns>
    <columns>IsCargoScanned__c</columns>
    <columns>Locator__c</columns>
    <columns>ScanTime__c</columns>
    <columns>Worker__c</columns>
    <columns>WorkOrderService__c</columns>
    <columns>ContainerID__c</columns>
    <columns>ContainerNo__c</columns>
    <columns>Cargo__c</columns>
    <filterScope>Everything</filterScope>
    <label>1.Cargo Status Update</label>
    <language>en_US</language>
</ListView>